--- a/HangmanWeb_Pt.2/template/index.html
+++ b/HangmanWeb_Pt.2/template/index.html
@@ -47,6 +47,7 @@
 </head>
 <body>
     <h1>Jeu du Pendu</h1>
+    <h1>Bienvenue, {{.Pseudo}} !</h1>
     <!-- Information du jeu -->
     <div id="game-info">
         <p id="masked-word">Mot à deviner : {{.GameState.MaskedWord}}</p>
